# ScrewDrivingBot1

./: .gitignore  Group 5 - End Effector.stl  README.md  frames_2024-10-30_22.53.28.gv  frames_2024-11-03_21.26.16.gv
HoleDetection/: blob_detection.py  blob_detection_im.py  blob_detection_im_centre.py
camera_bag/: metadata.yaml
src/brain/: CMakeLists.txt  package.xml
src/brain/launch/: system_launch.py  test_trans_launch.py  test_trans_withBag_launch.py  test_vision_launch.py  without_endeffector_launch.py  without_movement_launch.py
src/brain/src/: brain.cpp
src/end-effector/: package.xml  setup.cfg  setup.py
src/end-effector/end-effector/: arduino_code_backup.txt  arduino_serial.py  end_effector.py
src/end-effector/launch/: end_effector_launch.py
src/endEffector/: CMakeLists.txt  package.xml
src/end_effector/: CMakeLists.txt  README.md  package.xml  setup.py
src/end_effector/end_effector/: arduino_code_backup.txt  arduino_serial.py  end_effector.py
src/end_effector/launch/: end_effector_launch.py
src/end_effector_description/: CMakeLists.txt
src/end_effector_description/launch/: display.launch.py  end_effector_only.launch.py  end_effector_withModel.launch.py
src/end_effector_description/meshes/: EndEffectorMountConnectorHousing-v1.stl  EndEffectorMountHousing_ScrewBlock-v1.stl
src/end_effector_description/rviz/: view_robot.rviz
src/end_effector_description/urdf/: end_effector.urdf.xacro  end_effector.xacro  end_effector_housing.urdf.xacro  end_effector_only.xacro  end_effector_screwblock.urdf.xacro  end_effector_withDriverSupport.xacro  end_effector_withModel.xacro  housing_only.xacro  screwblock_only.xacro
src/hybrid_planning/test/: hybrid_planning_demo_node.cpp
src/hybrid_planning/test/launch/: hybrid_planning_common.py
src/interfaces/: CMakeLists.txt  package.xml
src/interfaces/srv/: ArmCmd.srv  BrainCmd.srv  BrainRoutineCmd.srv  EndEffectorCmd.srv  HybridCmd.srv  MotorControl.srv  RealCoorCmd.srv  VisionCmd.srv
src/movement/: CMakeLists.txt  README.md  package.xml
src/movement/launch/: arm_launch.py  hybrid_arm_launch.py
src/movement/src/: arm_brain.cpp  arm_movement.cpp  hybrid_arm_movement.cpp  hybrid_planning_demo_node.cpp
src/take_photo/: package.xml  setup.cfg  setup.py
src/take_photo/take_photo/: take_photo_im.py
src/testing/: package.xml  setup.py
src/testing/testing/: brain_routine_test.py  brain_vision_test.py  end_effector_test.py  ooi_test.py  vision_test.py
src/transformations/: CMakeLists.txt  package.xml
src/transformations/launch/: transformations_launch.py
src/transformations/src/: camera_dy_trans.cpp  ooi_server.cpp
src/vision/: package.xml  setup.py
src/vision/launch/: vision.launch.py  vision_launch.py
src/vision/vision/: vision_server.py
